<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/drugSearchTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drug_search_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/drugTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/drug_search_text_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/drugSearchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drug_search_button_text" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50px" />

    <TextView
        android:id="@+id/comboSearchTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/combo_search_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/drugComboBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/combo_search_text1_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/drugComboBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/combo_search_text2_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/comboSearchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/combo_search_button_text" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/searchProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>